--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@reduxjs/toolkit": "^2.11.2",
     "@tanstack/react-query": "^5.90.19",
     "axios": "^1.13.2",
     "expo": "~54.0.32",
@@ -51,6 +52,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.12.0",
     "react-native-web": "~0.21.0",
+    "react-redux": "^9.2.0",
     "react-stately": "^3.39.0",
     "tailwind-variants": "^0.1.20"
   },
