--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
     "lucide-react-native": "^0.510.0",
+    "moti": "^0.30.0",
     "nativewind": "^4.1.23",
     "react": "19.1.0",
     "react-aria": "^3.33.0",
