--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
     "expo-router": "^6.0.22",
     "expo-splash-screen": "~31.0.13",
@@ -53,6 +54,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.12.0",
     "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.5.1",
     "react-redux": "^9.2.0",
     "react-stately": "^3.39.0",
     "tailwind-variants": "^0.1.20"
