--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.12.0",
+    "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "react-redux": "^9.2.0",
@@ -69,7 +69,7 @@
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "react-native-worklets": "^0.7.2",
+    "react-native-worklets": "0.5.1",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.9.2"
   },
