--- a/eas.json
+++ b/eas.json
@@ -16,6 +16,9 @@
     "preview4": {
       "distribution": "internal"
     },
-    "production": {}
+    "production": {},
+    "cli": {
+      "appVersionSource": "app.json"
+    }
   }
 }
