--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.13.2",
     "expo": "~54.0.32",
     "expo-constants": "~18.0.13",
+    "expo-contacts": "~15.0.11",
     "expo-dev-client": "~6.0.20",
     "expo-document-picker": "~14.0.8",
     "expo-font": "~14.0.11",
@@ -54,6 +55,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -62,6 +64,7 @@
     "react-native-worklets": "0.5.1",
     "react-redux": "^9.2.0",
     "react-stately": "^3.39.0",
+    "reselect": "^5.1.1",
     "socket.io-client": "^4.8.3",
     "tailwind-variants": "^0.1.20"
   },
