--- a/eas.json
+++ b/eas.json
@@ -1,4 +1,7 @@
 {
+  "cli": {
+    "appVersionSource": "remote"
+  },
   "build": {
     "preview": {
       "android": {
@@ -16,9 +19,6 @@
     "preview4": {
       "distribution": "internal"
     },
-    "production": {},
-    "cli": {
-      "appVersionSource": "app.json"
-    }
+    "production": {}
   }
 }
