--- a/app.json
+++ b/app.json
@@ -17,6 +17,7 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#E6F4FE"
       },
+      "softwareKeyboardLayoutMode": "pan",
       "splash": {
         "image": "./assets/images/splash.png",
         "resizeMode": "contain",
