--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@legendapp/motion": "^2.4.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "11.4.1",
+    "@react-native-community/slider": "^5.1.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -33,6 +34,7 @@
     "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.13",
     "expo-contacts": "~15.0.11",
+    "expo-crypto": "^15.0.8",
     "expo-dev-client": "~6.0.20",
     "expo-document-picker": "~14.0.8",
     "expo-font": "~14.0.11",
@@ -69,7 +71,8 @@
     "react-stately": "^3.39.0",
     "reselect": "^5.1.1",
     "socket.io-client": "^4.8.3",
-    "tailwind-variants": "^0.1.20"
+    "tailwind-variants": "^0.1.20",
+    "victory-native": "^41.20.2"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
