--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-native-worklets": "0.5.1",
     "react-redux": "^9.2.0",
     "react-stately": "^3.39.0",
+    "redux-persist": "^6.0.0",
     "reselect": "^5.1.1",
     "socket.io-client": "^4.8.3",
     "tailwind-variants": "^0.1.20"
