--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tanstack/react-query": "^5.90.19",
     "axios": "^1.13.2",
     "expo": "~54.0.32",
+    "expo-audio": "~1.1.1",
     "expo-av": "^16.0.8",
     "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.13",
@@ -48,6 +49,7 @@
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
+    "expo-video": "~3.0.15",
     "expo-web-browser": "~15.0.10",
     "lucide-react-native": "^0.510.0",
     "moti": "^0.30.0",
